# desktop-assist-py

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
desktop_assist/: __init__.py  accessibility.py  actions.py  agent.py  browser.py  clipboard.py  dialogs.py  filesystem.py  instructions.py  launcher.py  logging.py  main.py  menus.py  notifications.py  ocr.py  permissions.py  processes.py  screen.py  tools.py  windows.py
swarm/outputs/01f80afc/: bug-review-done.md  planner-summary.md  refactoring-done.md  session-logging-done.md
swarm/outputs/0536a50d/: agent-08593bde-summary.md  agent-2282e33c-summary.md  agent-89738f29-summary.md  agent-93fd5c4f-summary.md  planner-summary.md
swarm/todo/: add-appkit-explicit-dependency.completed.md  agent-loop-cli.completed.md  agent-screenshot-vision.completed.md  app-launcher.completed.md  clipboard-integration.completed.md  file-system-helpers.completed.md  fix-pytesseract-dependency.completed.md  menu-bar-navigation.completed.md  notifications.completed.md  ocr-text-recognition.completed.md  process-management.completed.md  screen-utilities.completed.md  screenshot-grid-overlay.completed.md  session-logging.completed.md  unicode-type-text-support.completed.md  update-readme-missing-modules.completed.md  window-management.completed.md
tests/: test_accessibility.py  test_actions.py  test_agent.py  test_browser.py  test_clipboard.py  test_dialogs.py  test_filesystem.py  test_instructions.py  test_launcher.py  test_logging.py  test_menus.py  test_notifications.py  test_ocr.py  test_processes.py  test_screen.py  test_tools.py  test_windows.py
(+13 files in other folders)
