[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-assist"
version = "0.1.0"
description = "Drive a desktop machine with PyAutoGUI and Pillow."
requires-python = ">=3.10"
dependencies = [
    "pyautogui",
    "pillow",
    "pygetwindow>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
desktop-assist = "desktop_assist.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
