[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-assist"
version = "0.1.0"
description = "Drive a desktop machine with PyAutoGUI and Pillow."
requires-python = ">=3.10"
dependencies = [
    "pyautogui",
    "pillow",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.8.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[project.scripts]
desktop-assist = "desktop_assist.main:main"

[tool.setuptools.packages.find]
include = ["desktop_assist*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
